feat(user-service): implement badge service with auto-evaluate, manual grant, config and video limit management